# QT-Teacher-Information-management-system

./: CMakeLists.txt  CourseApplication.pro  README.md  dialog.cpp  dialog.h  dialog.ui  list.cpp  list.h  list.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  result.cpp  result.h  result.ui
CourseDesignBackend/: CMakeLists.txt  main.cpp
CourseDesignBackend/Service/: ExecutiveService.cpp  ExecutiveService.h  ExperimenterService.cpp  ExperimenterService.h  TeacherAndExecutiveService.cpp  TeacherAndExecutiveService.h  TeacherService.cpp  TeacherService.h
CourseDesignBackend/common/: BaseResponse.cpp  BaseResponse.h  ResultUtils.cpp  ResultUtils.h
CourseDesignBackend/mapper/: ExecutiveMapper.cpp  ExecutiveMapper.h  ExperimenterMapper.cpp  ExperimenterMapper.h  TeacherAndExecutiveMapper.cpp  TeacherAndExecutiveMapper.h  TeacherMapper.cpp  TeacherMapper.h
CourseDesignBackend/model/dataobject/: Executive.cpp  Executive.h  Experimenter.cpp  Experimenter.h  Shared.h  Teacher.cpp  Teacher.h  TeacherAndExecutive.cpp  TeacherAndExecutive.h
